--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@ target
 .idea
 *.iml
 .DS_Store
+./bloop
+./metals
+./vscode
+.bloop/bloop.settings.json
+.bloop/kafka-beginning-test.json
+.bloop/kafka-beginning.json
+.metals/metals.h2.db
+.metals/metals.lock.db
+.metals/metals.log
+.vscode/settings.json
